--- a/images/style.css
+++ b/images/style.css
@@ -34,3 +34,6 @@ A:active.poch {
 A:visited.poch {
 	COLOR: #FFFFFF; TEXT-DECORATION: none
 }
+A:visited.poch {
+	COLOR: #FFFFFF; TEXT-DECORATION: none
+}
