--- a/UniContent/profiles_html/_styles/template.css
+++ b/UniContent/profiles_html/_styles/template.css
@@ -432,3 +432,7 @@ p {
   text-transform: none !important;
   text-align: left !important;
 }
+p {
+  text-transform: none !important;
+  text-align: left !important;
+}
